vlib/v/checker/tests/array_append_array_type_mismatch_err.vv
fn main() {
	mut bc := []u8{}
	bc << [0xCA, 0xFE, 0xBA, 0xBE]
	println(bc)
}
